--- a/blog.html
+++ b/blog.html
@@ -14,12 +14,30 @@
     </header>
     <main>
         <article>
-            <h2>First Blog Post</h2>
-            <p>This is my first blog post content...</p>
+            <h2>My cute sloth!!</h2>
+            <p>Sloths are cute, slow-moving mammals found in Central and South America. 
+               They spend most of their time in trees, eating leaves and sleeping up to 20 hours a day. With their unique appearance and relaxed demeanor,
+               sloths have become popular symbols of chill and tranquility in popular culture. I love sloth!
+            </p>
+            <img src="/Users/mdfaruk88/Desktop/My_cute_sloth.jpeg" alt="Description of the image" class="small-image">
         </article>
         <article>
-            <h2>Second Blog Post</h2>
-            <p>This is my second blog post content...</p>
+            <h2>My cute and strong horse!!</h2>
+            <p>The Horses are large, strong mammals known for their speed, beauty, and long-standing partnership with humans.
+               They have been domesticated for thousands of years and have played crucial roles in transportation, agriculture, and sports.
+               Horses are herbivores and typically have a strong social structure within their herds. They come in various breeds, 
+               each with unique characteristics suited for different purposes, such as racing, riding, or work. Horses have a powerful sense of hearing and eyesight,
+               and they communicate through body language and vocalizations. They are revered for their intelligence, loyalty, and companionship with humans.
+            </p>
+            <img src="/Users/mdfaruk88/Desktop/My_cute_horse.webp" alt="Description of the image" class="small-image">
+        </article>
+        <article>
+            <h2>My favorite flowers collection!!</h2>
+            <p></p>
+            <img src="/Users/mdfaruk88/Desktop/my_red_roses.jpeg" alt="Description of the image" class="small-image">
+            <img src="/Users/mdfaruk88/Desktop/my_pink_roses.jpeg" alt="Description of the image" class="small-image">
+            <img src="/Users/mdfaruk88/Desktop/my_pink1_roses.jpeg" alt="Description of the image" class="small-image">
+            <img src="/Users/mdfaruk88/Desktop/my_flower_collection.jpeg" alt="Description of the image" class="small-image">
         </article>
     </main>
     <footer>
